yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-and-morty-api
  namespace: rick-and-morty
spec:
  type: ClusterIP
  selector:
    app: rick-and-morty-api
    environment: development
  ports:
    - port: 80
      targetPort: 3000
